Bug 161658 - Overlay selection in Math is wrong
Summary: Overlay selection in Math is wrong
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Formula Editor (show other bugs)
Version:
(earliest affected)
24.8.0.0 alpha1+
Hardware: All All
: medium normal
Assignee: Rafael Lima
URL:
Whiteboard: target:25.2.0 target:24.8.0.0.beta2
Keywords:
Depends on:
Blocks:
 
Reported: 2024-06-19 14:34 UTC by Rafael Lima
Modified: 2024-06-25 20:49 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot showing the problem (17.78 KB, image/png)
2024-06-19 14:34 UTC, Rafael Lima
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Rafael Lima 2024-06-19 14:34:11 UTC
Created attachment 194824 [details]
Screenshot showing the problem

Using the current master, as well as 24.8 alpha, the overlay of the selected formula in the formula editor is wrong. The outline is bigger than the selection.

See attached image for more information.

The problem was most likely introduced by myself in these patches:

https://gerrit.libreoffice.org/c/core/+/168538

https://gerrit.libreoffice.org/c/core/+/168618

I'm already looking into it. The problem seems to be the use of an incorrect map mode, which here should be in pixels.

System info:

Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 6b2aaaa6be71b1289521bd2ffd2d4abacecabb87
CPU threads: 16; OS: Linux 6.8; UI render: default; VCL: kf5 (cairo+xcb)
Locale: pt-BR (pt_BR.UTF-8); UI: en-US
Calc: CL threaded
Comment 1 V Stuart Foote 2024-06-19 14:55:09 UTC
Confirmed, the node outline in the command window is too large.

But after taking out of Visual edit mode from Tools -> Options -> LO Math and unchecking the default 'Enable visual editing' box. The command window does not get its "node" focus in Visual editing. 

Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 7d93b585f5366ce22aaf174a1b463b004739f588
CPU threads: 8; OS: Windows 10 X86_64 (10.0 build 19045); UI render: Skia/Vulkan; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL threaded
Comment 2 Rafael Lima 2024-06-21 14:04:12 UTC
This patch takes care of the issue:
https://gerrit.libreoffice.org/c/core/+/169292
Comment 3 Commit Notification 2024-06-22 12:39:44 UTC
Rafael Lima committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/c3e80cbaaa62d1150860cc5281dfc784dbbde8af

tdf#161658 Limit new selection overlay to Calc only

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2024-06-25 20:49:29 UTC
Rafael Lima committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/ef744cd5719335e9f98fbc0996c6bb32d072475e

tdf#161658 Limit new selection overlay to Calc only

It will be available in 24.8.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.